--- a/index.html
+++ b/index.html
@@ -206,11 +206,12 @@
                     
                     // Redirect after 2 seconds
                     setTimeout(function() {
-                        window.location.href = 'file:///C:/Users/Fardowsa/Desktop/DIWAAN.html'; // Change this to your desired page
+                        window.location.href = 'https://banadirschool.github.io/diwaan-fardowsa/'; // Change this to your desired page
                     }, 2000);
                 }
             });
         });
     </script>
 </body>
+
 </html>
